--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="dol-styles.css">
+        <link rel="stylesheet" href="/ryanshyStyle/dol-styles.css">
+        <link rel="stylesheet" href="/ryanshyStyle/index.css">
         <script src="/ryanshy/ryanshyGlobal.js"></script>
         <script src="/ryanshy/ryanshyRemoteStorage.js"></script>
         <script src="/ryanshy/ryanshyTypes.js"></script>
@@ -105,7 +106,7 @@
 
         <div id="ryanshy-greyout" class="ryanshy-greyout-disabled"></div>
 
-        <div id="ryanshy-toast" class=""></div>
+        <div id="ryanshy-toast"></div>
 
         <iframe id="dolEmbedded" class="ryanshy-iframe" type="text/html" src="Degrees of Lewdity 0.5.2.8.html">
         </iframe>
