created some integrate scripts for html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <div id="ryanshy-toast"></div>
 
-        <iframe id="dolEmbedded" class="ryanshy-iframe" type="text/html" src="Degrees of Lewdity 0.5.2.8.html">
+        <iframe id="dolEmbedded" class="ryanshy-iframe" type="text/html" src="Degrees of Lewdity.html">
         </iframe>
     </body>
 </html>
