relocate js and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <script src="/ryanshy/index.js" async defer></script>
+        <script src="/dolRemoteSave/index.js" async defer></script>
 
         <iframe id="dolEmbedded" class="ryanshy-iframe" type="text/html" src="Degrees of Lewdity.html">
         </iframe>
